syntax = "proto3";
package proto;
option go_package = "github/Stepanchigg/Finally_Service_Yandex/orchestrator/internal/proto";

service Calculator {
  rpc GetTask(TaskRequest) returns (TaskResponse) {}
  rpc SubmitResult(ResultRequest) returns (ResultResponse) {}
}

message TaskRequest {
  int32 computing_power = 1;
}

message TaskResponse {
  string id = 1;
  double arg1 = 2;
  double arg2 = 3;
  string operation = 4;
  int32 operation_time = 5;
}

message ResultRequest {
  string id = 1;
  double result = 2;
}

message ResultResponse {
  bool success = 1;
}